--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = F, warning = F, message = F, fig.pat = 'fig/')
 
 library(tidyverse)
 library(sf)
+library(leaflet)
 library(mapview)
 library(shiny)
 
@@ -21,21 +22,25 @@ data(ascithr)
 data(suppdat)
 data(psa)
 
+prj <- '+proj=longlat +datum=WGS84 +no_defs'
+
 # color palettes
 ctcol <- RColorBrewer::brewer.pal(3, 'RdYlGn') %>% 
   rev
 tycol <- RColorBrewer::brewer.pal(9, 'PRGn') %>% 
   rev
 ptcol <- RColorBrewer::brewer.pal(9, 'Set1')[c(1:3)]
+sccol <- colorNumeric(palette = c('#d7191c', '#abd9e9', '#2c7bb6'), na.color = 'yellow', domain = ascidat$scr)
+
 ```
 
-### Score distributions
+### Score distributions {.tabset}
 
-```{r inputs}
+```{r}
 selectInput('thr', 'Select reference threshold:', choices = list('1%' = 0.01, '10%' = 0.1, '30%' = 0.3), selected = '0.1')
 ```
 
-```{r reactives}
+```{r}
 # thresholds
 thrsh <- reactive({
   
@@ -51,15 +56,17 @@ thrsh <- reactive({
 })
 
 # asci data joined with thresholds, pass/fail categories
+# includes psa join
 ascicat <- reactive({
   
   # input
   thrsh <- thrsh()
   
+  # add threshold
   out <- ascidat %>% 
     left_join(thrsh, by = c('tax', 'ind')) %>% 
     mutate(
-      ascicat = ifelse(scr < thrsh, 'fail', 'pass')
+      scrcat = ifelse(scr < thrsh, 'fail', 'pass')
     )
   
   return(out)
@@ -67,8 +74,10 @@ ascicat <- reactive({
 })
 ```
 
+#### By Site types
 
 ```{r}
+# boxplot by site types
 renderPlot({
 
   # input
@@ -77,9 +86,9 @@ renderPlot({
   # toplo 
   toplo <- ascicat %>% 
     filter(!is.na(sit2))
-  
+
   # plot
-  p <- ggplot(ascicat, aes(x = toplo, y = scr)) + 
+  p <- ggplot(toplo, aes(x = sit2, y = scr)) + 
     geom_boxplot(outlier.size = 1, aes(fill = sit2), alpha = 0.7) + 
     geom_hline(aes(yintercept = thrsh)) +
     facet_grid(ind ~ tax) +
@@ -96,6 +105,212 @@ renderPlot({
   return(p)
   
 }, height = 600)
+
+# proportion pass/fail by site type
+renderPlot({
+  
+  # input
+  ascicat <- ascicat()
+  
+  # get percent sites in each category by type
+  toplo <- ascicat %>% 
+    group_by(sit2, ind, tax, scrcat) %>% 
+    summarise(
+      n = length(scrcat)
+    ) %>% 
+    ungroup %>% 
+    rename(`Index\ncategory` = scrcat) %>% 
+    filter(!is.na(sit2)) %>% 
+    filter(!is.na(`Index\ncategory`))
+  
+  p <- ggplot(toplo, aes(x = sit2, y = n, fill = `Index\ncategory`)) +
+    geom_bar(stat = 'identity', position = 'fill', colour = 'grey', alpha = 0.8, width = 0.75) + 
+    facet_grid(ind ~ tax) + 
+    scale_y_continuous('Proportion', expand = c(0, 0)) +
+    scale_fill_manual(values = ctcol[c(3, 1)]) + 
+    theme_minimal(base_family = 'serif', base_size = 16) +
+    theme(
+      axis.text.x = element_text(angle = 45, hjust = 1), 
+      axis.title.x = element_blank(), 
+      panel.border = element_rect(colour = 'black', fill = NA, size = 0.5), 
+      panel.grid.major = element_blank(), 
+      panel.grid.minor = element_blank(), 
+      legend.position = 'top'
+    ) 
+  
+  return(p)
+  
+}, height = 600)
+```
+
+#### By PSA regions
+
+```{r}
+# boxplot by PSA
+renderPlot({
+
+  # input
+  ascicat <- ascicat()
+
+  # toplo 
+  toplo <- ascicat %>% 
+    filter(!is.na(PSA6))
+
+  # plot
+  p <- ggplot(toplo, aes(x = PSA6, y = scr)) + 
+    geom_boxplot(outlier.size = 1, alpha = 0.6, fill = 'lightblue') + 
+    geom_hline(aes(yintercept = thrsh)) +
+    facet_grid(ind ~ tax) +
+    scale_y_continuous('Index Score') + 
+    theme_minimal(base_family = 'serif', base_size = 16) +
+    theme(
+      axis.text.x = element_text(angle = 45, hjust = 1), 
+      axis.title.x = element_blank(), 
+      panel.border = element_rect(colour = 'black', fill = NA, size = 0.5), 
+      legend.position = 'none'
+    ) 
+  
+  return(p)
+  
+}, height = 600)
+
+# proportion pass/fail by PSA
+renderPlot({
+  
+  # input
+  ascicat <- ascicat()
+  
+  # get percent sites in each category by PSA
+  toplo <- ascicat %>% 
+    group_by(PSA6, ind, tax, scrcat) %>% 
+    summarise(
+      n = length(scrcat)
+    ) %>% 
+    ungroup %>% 
+    rename(`Index\ncategory` = scrcat) %>% 
+    filter(!is.na(PSA6)) %>% 
+    filter(!is.na(`Index\ncategory`))
+  
+  p <- ggplot(toplo, aes(x = PSA6, y = n, fill = `Index\ncategory`)) +
+    geom_bar(stat = 'identity', position = 'fill', colour = 'grey', alpha = 0.8, width = 0.75) + 
+    facet_grid(ind ~ tax) + 
+    scale_y_continuous('Proportion', expand = c(0, 0)) +
+    scale_fill_manual(values = ctcol[c(3, 1)]) + 
+    theme_minimal(base_family = 'serif', base_size = 16) +
+    theme(
+      axis.text.x = element_text(angle = 45, hjust = 1), 
+      axis.title.x = element_blank(), 
+      panel.border = element_rect(colour = 'black', fill = NA, size = 0.5), 
+      panel.grid.major = element_blank(), 
+      panel.grid.minor = element_blank(), 
+      legend.position = 'top'
+    ) 
+  
+  return(p)
+  
+}, height = 600)
+
+```
+
+#### Maps
+
+```{r}
+column(12, 
+  
+       column(6, 
+              selectInput('indsel', 'Select index:', choices = c('O/E', 'pMMI','ASCI'))
+       ),
+       
+       column(6, 
+              selectInput('taxsel', 'Select group:', choices = list('Diatom', 'Soft-bodied', 'Hybrid'))
+       )
+  
+)
+```
+
+```{r}
+mapdat <- reactive({
+  
+  # input
+  indsel <- input$indsel
+  taxsel <- input$taxsel
+  ascicat <- ascicat()
+
+  # get index and taxa for mapping 
+  # get most recent visit
+  out <- ascicat %>% 
+    filter(tax %in% taxsel) %>% 
+    filter(ind %in% indsel) %>% 
+    filter(smps == 1) %>%
+    filter(!is.na(scrcat)) %>% 
+    group_by(site) %>% 
+    filter(date %in% max(date)) %>% 
+    ungroup %>% 
+    dplyr::select(site, date, ind, tax, scr, scrcat, lon, lat) %>% 
+    filter(!is.na(lon)|!is.na(lat)) %>% 
+    mutate(
+      lon = as.numeric(lon), 
+      lat = as.numeric(lat)
+      ) %>% 
+    st_as_sf(coords = c('lon', 'lat'), crs = prj)
+  
+  return(out)
+  
+})
+```
+
+```{r}
+# scrmap
+output$scrmap <- renderLeaflet({
+  
+  # input
+  mapdat <- mapdat()
+  
+  mapview(psa, fill = F, label = psa$PSA6, homebutton = F) %>% 
+    .@map %>% 
+    removeMouseCoordinates() %>%
+    addCircleMarkers(
+      data = mapdat, 
+      layerId = ~site,
+      stroke = TRUE,
+      color = 'black',
+      fill = TRUE,
+      fillColor = ~sccol(scr),
+      radius=5, 
+      weight = 1,
+      fillOpacity = 1,
+      label = ~paste0(site, ' (', date, '): ', round(scr, 2), ' (', scrcat, ')')
+    )
+  
+  })
+
+leafletOutput('scrmap', height = 700)
+
+# # pass/fail map
+# output$scrmap <- renderLeaflet({
+#   
+#   # input
+#   mapdat <- mapdat()
+#   
+#   mapview(psa, fill = F, label = psa$PSA6, homebutton = F) %>% 
+#     .@map %>% 
+#     removeMouseCoordinates() %>%
+#     addCircleMarkers(
+#       data = mapdat, 
+#       layerId = ~site,
+#       stroke = TRUE,
+#       color = 'black',
+#       fill = TRUE,
+#       fillColor = ~sccol(scr),
+#       radius=5, 
+#       weight = 1,
+#       fillOpacity = 1,
+#       label = ~paste0(site, ' (', date, '): ', round(scr, 2), ' (', scrcat, ')')
+#     )
+#   
+#   })
+# 
+# leafletOutput('scrmap', height = 700)
 ```
 
 ### Relationships with environmental variables
