--- a/index.Rmd
+++ b/index.Rmd
@@ -8,6 +8,8 @@ self_contained: yes
 runtime: shiny
 ---
 
+<a href="https://github.com/fawda123/ASCIfigs/" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+
 ```{r setup, warning = F, message = F, cache = T, echo = F}
 knitr::opts_chunk$set(echo = F, warning = F, message = F, fig.pat = 'fig/')
 
@@ -63,11 +65,10 @@ pbase <- theme_minimal(base_family = 'serif', base_size = 15) +
 thrsh <- reactive({
   
   # input
-  thr <- input$thr %>% 
-    as.numeric
+  thr <- input$thr 
   
   out <- ascithr %>% 
-    filter(ptile %in% thr)
+    filter(bigls %in% thr)
   
   return(out)
   
@@ -82,9 +83,9 @@ ascicat <- reactive({
   
   # add threshold
   out <- ascidat %>% 
-    left_join(thrsh, by = c('tax', 'ind')) %>% 
+    left_join(thrsh, by = 'tax') %>% 
     mutate(
-      scrcat = ifelse(scr < thrsh, 'not met', 'met')
+      scrcat = ifelse(scr < bival, 'not met', 'met')
     )
   
   return(out)
@@ -156,7 +157,7 @@ cmbdat <- reactive({
     mutate(
       scrdif = scrnew - scr
     ) %>% 
-    select(one_of(c('sampleid', 'scrnew', 'indnew', 'ptile', 'thrsh', 'ind', 'tax', 'scr', 'scrdif', evvr)))
+    select(one_of(c('sampleid', 'scrnew', 'indnew', 'ptile', 'bival', 'ind', 'tax', 'scr', 'scrdif', evvr)))
   
   return(out)
   
@@ -164,7 +165,7 @@ cmbdat <- reactive({
 ```
 
 ```{r}
-selectInput('thr', 'Select biointegrity goal:', choices = list('1% reference' = 0.01, '10%  reference' = 0.1, '30%  reference' = 0.3), selected = '0.1')
+selectInput('thr', 'Select biointegrity goal:', choices = unique(ascithr$bigls), selected = 'Ref10')
 ```
 
 ## Score distributions {.tabset}
@@ -187,7 +188,7 @@ renderPlot({
   # plot
   p <- ggplot(toplo, aes(x = sit2, y = scr)) + 
     geom_boxplot(outlier.size = 1, aes(fill = sit2), alpha = 0.7) + 
-    geom_hline(aes(yintercept = thrsh), linetype = 'dashed', colour = 'tomato1', size = 1) +
+    geom_hline(aes(yintercept = bival), linetype = 'dashed', colour = 'tomato1', size = 1) +
     facet_grid(ind ~ tax) +
     scale_fill_manual(values = ctcol) +
     scale_y_continuous('Index Score') + 
@@ -262,7 +263,7 @@ renderPlot({
   # plot
   p <- ggplot(toplo, aes(x = PSA6, y = scr)) + 
     geom_boxplot(outlier.size = 1, alpha = 0.6, fill = 'lightblue') + 
-    geom_hline(aes(yintercept = thrsh), linetype = 'dashed', colour = 'tomato1', size = 1) +
+    geom_hline(aes(yintercept = bival), linetype = 'dashed', colour = 'tomato1', size = 1) +
     facet_grid(ind ~ tax) +
     scale_y_continuous('Index Score') + 
     theme_minimal(base_family = 'serif', base_size = 16) +
@@ -494,7 +495,7 @@ renderPlot({
   pnew <- ggplot(toplo_new, aes_string(x = evvr, y = 'scr')) +
     geom_point(alpha = 0.7, size = 1.3) +
     geom_smooth(method = 'lm', se = FALSE) +
-    geom_hline(aes(yintercept = thrsh), linetype = 'dashed', colour = 'tomato1', size = 1) +
+    geom_hline(aes(yintercept = bival), linetype = 'dashed', colour = 'tomato1', size = 1) +
     facet_grid(indnew ~ tax) +
     scale_y_continuous('ASCI score', expand = c(0, 0)) +  
     scale_x_continuous(xlab) +
