--- a/index.Rmd
+++ b/index.Rmd
@@ -146,7 +146,7 @@ cmbdat <- reactive({
   # supp data to join
   suppjn <- suppdat %>% 
     filter(ind %in% olin)
-  
+
   # new indices
   out <- ascicat %>% 
     rename(
@@ -500,7 +500,7 @@ renderPlot({
   # new indices
   toplo_new <- cmbdat
 
-  pnew <- ggplot(toplo_new, aes_string(x = evvr, y = 'scr')) +
+  pnew <- ggplot(toplo_new, aes_string(x = evvr, y = 'scrnew')) +
     geom_point(alpha = 0.7, size = 1.3) +
     geom_smooth(method = 'lm', se = FALSE) +
     geom_hline(aes(yintercept = bival), linetype = 'dashed', colour = 'tomato1', size = 1) +
@@ -540,7 +540,7 @@ renderPlot({
 
   toplo <- cmbdat %>% 
     filter(!is.na(scr))
-
+ 
   p1 <- ggplot(toplo, aes(x = scr, y = scrnew)) +
     geom_point(alpha = 0.6, size = 1) +
     geom_abline(intercept = 0, slope = 1, linetype = 'dashed') +
